--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,17 +36,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  carousel_slider: ^4.2.1
   firebase_auth: ^4.2.4
   flutter_bloc: ^8.1.1
   firebase_core: ^2.4.1
   shared_preferences: ^2.0.15
   pro_shered_preference: ^0.0.7
-  cloud_firestore: ^4.3.1
+  # cloud_firestore: ^4.3.1
   fluttertoast: ^8.1.2
   conditional_builder_null_safety: ^0.0.6
   image_picker: ^0.8.6
   firebase_storage: ^11.0.10
   dio: ^4.0.6
+  cloud_firestore: ^4.2.0
+
+  # flutter_switch: ^0.3.2
+
 
 
 
