--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,13 +42,17 @@ dependencies:
   firebase_core: ^2.4.1
   shared_preferences: ^2.0.15
   pro_shered_preference: ^0.0.7
-  # cloud_firestore: ^4.3.1
   fluttertoast: ^8.1.2
   conditional_builder_null_safety: ^0.0.6
   image_picker: ^0.8.6
   firebase_storage: ^11.0.10
   dio: ^4.0.6
   cloud_firestore: ^4.2.0
+  smooth_page_indicator: ^1.0.0+2
+  introduction_screen: ^3.1.4
+  animated_text_kit: ^4.2.2
+
+
 
   # flutter_switch: ^0.3.2
 
