--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.2.1
   firebase_auth: ^4.2.4
+  google_sign_in: ^5.4.3
+  flutter_facebook_auth: '^3.5.0'
   flutter_bloc: ^8.1.1
   firebase_core: ^2.4.1
   shared_preferences: ^2.0.15
