--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   introduction_screen: ^3.1.4
   animated_text_kit: ^4.2.2
+  convex_bottom_bar: ^3.1.0+1
+  lottie: ^2.2.0
+
 
 
 
